tests fixes/added new tests